2015-11-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/CMakeLists.txt: Build with freeradius-client library support when
	BUILD_WITH_RADIUS is set. Add ldflags and radius.c and radius.h files.

	* misc/radius.c, misc/radius.h: New files.

2015-11-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_hosts.c (openvavs_host_get_addr6): For HOST_TYPE_NAME
	hosts, attempt to resolve the hostname's IPv6 address when IPv4 address
	resolution fails.

2015-10-26  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c (main): Add --config-file parameter. Load preferences from
	config, and use the correct kb path.

	* CMakeLists.txt: Define OPENVASSD_CONF.

	* doc/openvas-nasl.1: Update documentation.

2015-10-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta3.

2015-10-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.1+beta2 release.

	* CHANGES: Updated.

2015-10-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Updated.

2015-10-19  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_param): Add mandatory element.
	(osp_get_scanner_details): Get the parameter's mandatory field.
	(osp_param_id, osp_param_name, osp_param_desc, osp_param_default):
	Constify parameter.
	(osp_parameter_mandatory): New function.

	* osp/osp.h: Add and adjust functions prototypes.

2015-10-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_get_scan): Make report_xml parameter optional. Add
	error parameter.
	(osp_stop_scan, osp_start_scan): Add error parameter and adjust
	accordingly.

	* osp/osp.h: Adjust function prototypes.

2015-10-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_start_scan): Add ports parameter.

	* osp/osp.h: Adjust function prototype.

2015-10-12  Hani Benhabiles <hani.benhabiles@greenbone.net>
